<resources>
   <string name="app_name">Coffeetime</string>
   <string name="logout">Logout</string>
   <string name="logout_group">Leave group</string>
   <string name="no_groups_hint">Create your first group of coffeenerdz</string>
   <string name="add_group_dialog_msg">Choose a name for your new group:</string>
   <string name="ok">OK</string>
   <string name="abort">Abort</string>
   <string name="reset">RESET</string>
   <string name="emptiness_title">Emptiness</string>
   <string name="emptiness_description">there is no coffee at the moment</string>
   <string name="action_ask">ASK</string>
   <string name="action_new">NEW</string>
   <string name="asking_title">Asking</string>
   <string name="asking_description">Who is in for a new round of coffee? Only one cup per person at the moment.</string>
   <string name="action_plus_one">+1</string>
   <string name="action_prepare">prepare</string>
   <string name="preparation_title">Preparation</string>
   <string name="preparation_description">Press \"START\" when you finished preparing the coffee!</string>
   <string name="action_start">Start</string>
   <string name="patience_title">Patience</string>
   <string name="patience_description">Relax - Coffee is brewing and soon be ready. Press \"DONE\" if coffee has finished before timer ended.</string>
   <string name="action_done">DONE</string>
   <string name="coffeeness_title">Coffeeness</string>
   <string name="coffeeness_description">Best moment of the day. Take a cup and enjoy!</string>
   <string name="action_take">TAKE</string>
   <string name="appwidget_text">app widget</string>
   <string name="add_widget">Add widget</string>
   <string name="cd_cup">image of a cup with a counter inside</string>
   <string name="cd_full_jar">image of a filled jar</string>
   <string name="cd_empty_jar">image of an empty jar</string>
   <string name="cd_process_jar">image of a jar which is about to fill</string>
   <string name="cd_coffee_bean">image of a coffee bean</string>
   <string name="cd_water_jar">image of a jar filled with water</string>
   <string name="cd_timer">image of a clock</string>
   <string name="toast_error_load_group">Loading group failed</string>
   <string name="cd_fab_create_group">button to create a new coffee group</string>
   <string name="toast_login_register_error">Login/Register failed</string>
   <string name="toast_load_group_of_user_error">Loading the group of the user failed! ErrorCode: %s</string>
   <string name="toast_logout_error">Logout failed</string>
</resources>
