<?xml version="1.0" encoding="utf-8"?>
<com.frick.maximilian.coffeetime.status.views.preparation.PreparationView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content">

   <android.support.v7.widget.CardView
      style="@style/CardView.Light"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      app:cardBackgroundColor="@color/preparation"
      app:cardCornerRadius="4dp"
      tools:ignore="ContentDescription">

      <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView
            android:id="@+id/primary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/preparation_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/container_prepare_infos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

         <TextView
            android:id="@+id/sub_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:alpha="0.6"
            android:text="@string/preparation_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/container_prepare_infos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary_text" />

         <GridLayout
            android:id="@+id/container_prepare_infos"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="#33FFFFFF"
            android:columnCount="2"
            android:elevation="4dp"
            android:rowCount="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
               android:id="@+id/cups_amount"
               android:layout_column="0"
               android:layout_columnWeight="1"
               android:layout_gravity="end"
               android:layout_marginEnd="4dp"
               android:layout_row="0"
               android:layout_rowWeight="4"
               android:gravity="center_vertical"
               tools:text="2" />

            <ImageView
               android:layout_column="1"
               android:layout_columnWeight="1"
               android:layout_gravity="start"
               android:layout_row="0"
               android:contentDescription="@string/cd_cup"
               android:layout_rowWeight="4"
               android:gravity="center_vertical"
               android:src="@drawable/ic_cup_small" />

            <TextView
               android:id="@+id/coffee_amount"
               android:layout_column="0"
               android:layout_columnWeight="1"
               android:layout_gravity="end"
               android:layout_marginEnd="4dp"
               android:layout_row="1"
               android:layout_rowWeight="4"
               android:gravity="center_vertical"
               tools:text="32g" />

            <ImageView
               android:layout_column="1"
               android:layout_columnWeight="1"
               android:layout_gravity="start"
               android:layout_row="1"
               android:contentDescription="@string/cd_coffee_bean"
               android:layout_rowWeight="4"
               android:gravity="center_vertical"
               android:src="@drawable/ic_bean_small" />

            <TextView
               android:id="@+id/water_amount"
               android:layout_column="0"
               android:layout_columnWeight="1"
               android:layout_gravity="end"
               android:layout_marginEnd="4dp"
               android:layout_row="2"
               android:layout_rowWeight="4"
               android:gravity="center_vertical"
               tools:text="500ml" />

            <ImageView
               android:layout_column="1"
               android:layout_columnWeight="1"
               android:layout_gravity="start"
               android:layout_row="2"
               android:contentDescription="@string/cd_water_jar"
               android:layout_rowWeight="4"
               android:gravity="center_vertical"
               android:src="@drawable/ic_water_can_small" />

            <TextView
               android:id="@+id/timer"
               android:layout_column="0"
               android:layout_columnWeight="1"
               android:layout_gravity="end"
               android:layout_marginEnd="4dp"
               android:layout_row="3"
               android:layout_rowWeight="4"
               android:gravity="center_vertical"
               tools:text="5:00" />

            <ImageView
               android:layout_column="1"
               android:layout_columnWeight="1"
               android:layout_gravity="start"
               android:layout_row="3"
               android:contentDescription="@string/cd_timer"
               android:layout_rowWeight="4"
               android:gravity="center_vertical"
               android:src="@drawable/ic_timer" />

         </GridLayout>

         <Button
            android:id="@+id/action_button_1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="60dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/action_start"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_prepare_infos" />

      </android.support.constraint.ConstraintLayout>

   </android.support.v7.widget.CardView>
</com.frick.maximilian.coffeetime.status.views.preparation.PreparationView>