<?xml version="1.0" encoding="utf-8"?>
<com.frick.maximilian.coffeetime.status.views.asking.AskingView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content">

   <android.support.v7.widget.CardView
      style="@style/CardView.Light"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      app:cardBackgroundColor="@color/asking"
      app:cardCornerRadius="4dp"
      tools:ignore="ContentDescription">

      <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView
            android:id="@+id/primary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/asking_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/media_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

         <TextView
            android:id="@+id/sub_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:alpha="0.6"
            android:text="@string/asking_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/cups_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary_text" />

         <ImageView
            android:id="@+id/media_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cup" />

         <TextView
            android:id="@+id/cups_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="38dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/media_image"
            app:layout_constraintEnd_toEndOf="@+id/media_image"
            app:layout_constraintStart_toStartOf="@+id/media_image"
            app:layout_constraintTop_toTopOf="@+id/media_image"
            tools:text="4" />

         <Button
            android:id="@+id/action_button_1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="60dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/action_plus_one"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/media_image" />

         <Button
            android:id="@+id/action_button_2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:enabled="false"
            android:minWidth="60dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/action_prepare"
            android:textColor="@color/enabled_selector"
            app:layout_constraintStart_toEndOf="@+id/action_button_1"
            app:layout_constraintTop_toTopOf="@+id/action_button_1" />

      </android.support.constraint.ConstraintLayout>

   </android.support.v7.widget.CardView>
</com.frick.maximilian.coffeetime.status.views.asking.AskingView>