<?xml version="1.0" encoding="utf-8"?>
<com.frick.maximilian.coffeetime.status.views.patience.PatienceView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content">

   <android.support.v7.widget.CardView
      style="@style/CardView.Light"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      app:cardBackgroundColor="@color/patience"
      app:cardCornerRadius="4dp"
      tools:ignore="ContentDescription">

      <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView
            android:id="@+id/primary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/patience_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/media_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

         <TextView
            android:id="@+id/sub_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:alpha="0.6"
            android:text="@string/patience_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/media_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary_text" />

         <FrameLayout
            android:id="@+id/media_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
               android:id="@+id/progress_bar"
               style="?android:attr/progressBarStyleHorizontal"
               android:layout_width="128dp"
               android:layout_height="128dp"
               android:layout_gravity="center"
               android:max="100"
               android:progress="0"
               android:progressDrawable="@drawable/circular" />

            <ImageView
               android:layout_width="112dp"
               android:layout_height="112dp"
               android:layout_gravity="center"
               app:srcCompat="@drawable/ic_process" />

            <TextView
               android:id="@+id/remaining_time"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom|center_horizontal"
               android:layout_marginTop="4dp"
               android:alpha="0.6"
               android:textColor="@android:color/white"
               tools:text="02:34" />

         </FrameLayout>

         <Button
            android:id="@+id/action_button_1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="60dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/action_done"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/media_image" />

      </android.support.constraint.ConstraintLayout>

   </android.support.v7.widget.CardView>
</com.frick.maximilian.coffeetime.status.views.patience.PatienceView>